worked on ai processing speech to text

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -9,6 +9,6 @@
   <h1>Voice Navigator</h1>
   <button id="listen">Start Listening</button>
   <div id="status">Click to speak a command</div>
-  <script src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
