some commands work

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -9,6 +9,14 @@
   <h1>Voice Navigator</h1>
   <button id="listen">Start Listening</button>
   <div id="status">Click to speak a command</div>
+  
+  <h2>Test Commands</h2>
+  <div class="test-buttons">
+    <button class="test-btn" data-command="what does this page say?">What does this page say?</button>
+    <button class="test-btn" data-command="give a summary of this page">Give a summary</button>
+    <button class="test-btn" data-command="click the first link">Click first link</button>
+  </div>
+  
   <script type="module" src="popup.js"></script>
 </body>
 </html>
