made it better n stuff

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -10,6 +10,11 @@
   <button id="listen">Start Listening</button>
   <div id="status">Click to speak a command</div>
   
+  <h2>AI Response</h2>
+  <div id="ai-response" class="ai-response-panel">
+    <div id="ai-text">AI responses will appear here...</div>
+  </div>
+  
   <h2>Test Commands</h2>
   <div class="test-buttons">
     <button class="test-btn" data-command="what does this page say?">What does this page say?</button>
