Implement continuous conversation feature and enhance UI
- Added functionality for continuous listening in the content script.
- Updated background script to handle new message types for voice status and errors.
- Improved popup UI with a toggle for continuous conversation and updated status messages.
- Enhanced error handling for microphone access and speech recognition.
- Refactored message handling to streamline communication between background and content scripts.

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -20,6 +20,11 @@
       </button>
     </div>
 
+    <div class="option">
+      <input type="checkbox" id="continuous-toggle">
+      <label for="continuous-toggle">Continuous conversation</label>
+    </div>
+
     <div class="text-input">
       <label for="command-input" class="sr-only">Type a command</label>
       <input 
@@ -41,9 +46,7 @@
       </div>
     </div>
 
-    <p class="shortcut">
-      Keyboard shortcut: <kbd>Alt+V</kbd> on any page
-    </p>
+    <p class="hint">Microphone permission is required per site.</p>
   </main>
 
   <script src="popup.js" type="module"></script>
